--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </nav>
-    <section class="background-img">
+    <section class="background-img container-fluid py-5">
         <div class="hero-content">
             <div class="container pr5 pl5">
                 <div class="col-md-8 text-center m-auto white ">
@@ -62,7 +62,8 @@
                     <h1 class="h1-lg mb10">FORESTER</h1>
                     <h5 class="h5-md mb20 text-white">Unordinary digital agency crafting sophisticated and<br>
                         eccentric stuff that will leave you speechless
-                    </h5> <a href="#" class="btn btn-scroll btn-hero">EXPLORE NOW</a> </div>
+                    </h5> <a href="#" class="btn btn-scroll btn-hero">EXPLORE NOW</a>
+                </div>
             </div>
         </div>
     </section>
@@ -70,7 +71,8 @@
         <div class="container text-center justify-content-center py-5">
             <h5 class="py-2">OUR STORY
             </h5>
-            <p class="story-text py-2">Unordinary digital agency crafting sophisticated and eccentric stuff that will leave you speechless, we had opportunity to work on wide variety of projects for different clients around the world, we're responsible and our client is our priority </p> <span class="link">Interested in our story and want to meet us even better? <a href="#" class="A">Read More</a></span> </div>
+            <p class="story-text py-2">Unordinary digital agency crafting sophisticated and eccentric stuff that will leave you speechless, we had opportunity to work on wide variety of projects for different clients around the world, we're responsible and our client is our priority </p> <span class="link">Interested in our story and want to meet us even better? <a href="#" class="A">Read More</a></span>
+        </div>
     </section>
     <section class="container-fluid py-5 bgcol">
         <div class="container text-center">
@@ -118,7 +120,8 @@
                 </div>
                 <div class="col-md-12 col-12 py-5">
                     <p class="get-in">Top quality services executed by our devoted, yet
-                        <br>creative team. Nothing less than creative. </p> <a href="#" class="btn btn-ghost-black"> LET'S GET IN TOUCH</a> </div>
+                        <br>creative team. Nothing less than creative. </p> <a href="#" class="btn btn-ghost-black"> LET'S GET IN TOUCH</a>
+                </div>
             </div>
         </div>
     </section>
@@ -146,87 +149,105 @@
                     <div class="item-caption">
                         <div class="item-desc">
                             <div class="desc-title">
-                                <h3 class="h3-md">Logo Design</h3> </div>
+                                <h3 class="h3-md">Logo Design</h3>
+                            </div>
                             <div class="caption-btn">
-                                <h5 class="subheading">DESIGN</h5> </div>
+                                <h5 class="subheading">DESIGN</h5>
+                            </div>
                         </div>
-                    </div> <img src="images/1.jpg" class="w-100" alt=""> </a>
+                    </div> <img src="images/1.jpg" class="w-100" alt="">
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
                 <a href="images/2.jpg">
                     <div class="item-caption">
                         <div class="item-desc">
                             <div class="desc-title">
-                                <h3 class="h3-md">Happy Face</h3> </div>
+                                <h3 class="h3-md">Happy Face</h3>
+                            </div>
                             <div class="caption-btn">
-                                <h5 class="subheading">PHOTO</h5> </div>
+                                <h5 class="subheading">PHOTO</h5>
+                            </div>
                         </div>
-                    </div> <img src="images/2.jpg" class="w-100" alt=""></a>
+                    </div> <img src="images/2.jpg" class="w-100" alt="">
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
                 <a href="images/3.jpg">
                     <div class="item-caption">
                         <div class="item-desc">
                             <div class="desc-title">
-                                <h3 class="h3-md">Can</h3> </div>
+                                <h3 class="h3-md">Can</h3>
+                            </div>
                             <div class="caption-btn">
-                                <h5 class="subheading">BRANDING</h5> </div>
+                                <h5 class="subheading">BRANDING</h5>
+                            </div>
                         </div>
-                    </div> <img src="images/3.jpg" class="w-100" alt=""></a>
+                    </div> <img src="images/3.jpg" class="w-100" alt="">
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
                 <a href="images/4.jpg">
                     <div class="item-caption">
                         <div class="item-desc">
                             <div class="desc-title">
-                                <h3 class="h3-md">Leaves</h3> </div>
+                                <h3 class="h3-md">Leaves</h3>
+                            </div>
                             <div class="caption-btn">
-                                <h5 class="subheading">VIDEO</h5> </div>
+                                <h5 class="subheading">VIDEO</h5>
+                            </div>
                         </div>
-                    </div> <img src="images/4.jpg" class="w-100" alt=""></a>
+                    </div> <img src="images/4.jpg" class="w-100" alt="">
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
                 <a href="images/5.jpg">
                     <div class="item-caption">
                         <div class="item-desc">
                             <div class="desc-title">
-                                <h3 class="h3-md">Label</h3> </div>
+                                <h3 class="h3-md">Label</h3>
+                            </div>
                             <div class="caption-btn">
-                                <h5 class="subheading">BRANDING</h5> </div>
+                                <h5 class="subheading">BRANDING</h5>
+                            </div>
                         </div>
-                    </div> <img src="images/5.jpg" class="w-100" alt=""> </a>
+                    </div> <img src="images/5.jpg" class="w-100" alt="">
+                </a>
             </div>
             <div class="col-md-4 col-sm-6 col-12 position-relative p-2">
                 <a href="images/6.jpg">
                     <div class="item-caption">
                         <div class="item-desc">
                             <div class="desc-title">
-                                <h3 class="h3-md">Mockup</h3> </div>
+                                <h3 class="h3-md">Mockup</h3>
+                            </div>
                             <div class="caption-btn">
-                                <h5 class="subheading">PHOTO</h5> </div>
+                                <h5 class="subheading">PHOTO</h5>
+                            </div>
                         </div>
-                    </div> <img src="images/6.jpg" class="w-100" /></a>
+                    </div> <img src="images/6.jpg" class="w-100" />
+                </a>
             </div>
         </div>
     </section>
     <section class="container-fluid py-5 bgcol">
         <div class="container py-5">
             <div class="row no-gutters">
-                <div class="col-lg-4 col-md-12 p-md-2">
+                <div class="col-lg-4 col-md-12 p-md-3">
                     <div class="icon float-left"> <i class="far fa-lightbulb"></i> </div>
                     <div class="icon-desc text-left ">
                         <h5>WE'RE CREATIVE</h5>
                         <p>Day handsome addition horrible sensible goodness two contempt. Evening for married summies imperia </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 p-md-2">
+                <div class="col-lg-4 col-md-12 p-md-3">
                     <div class="icon float-left"> <i class="fas fa-user-tie"></i></div>
                     <div class="icon-desc text-left  ">
                         <h5>WE'RE ECCENTRICS</h5>
                         <p>Day handsome addition horrible sensible goodness two contempt. Evening for married summies imperia </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 p-md-2">
+                <div class="col-lg-4 col-md-12 p-md-3">
                     <div class="icon float-left"><i class="fas fa-medal"></i></div>
                     <div class="icon-desc text-left ">
                         <h5>WE'RE AWARDED</h5>
@@ -236,20 +257,193 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid py-5">
+        <div class="container py-5">
+            <div class="row text-center py-5">
+                <div class="col-12 pb-4">
+                    <h5>THE CREW</h5>
+                    <h1>Team</h1>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 py-2">
+                    <div class="team">
+                        <div class="position-absolute team-description ">
+                            <div class="t-title ">
+                                <h3 class="m-0 p-0 h3-md"> Venus blake</h3>
+                            </div>
+                            <div class="subtitle ">
+                                <h5>DESIGNER</h5>
+                            </div>
+                            <div class="t-desc px-3">
+                                <p>As an valley indeed so no wonder future nature vanity debating all she</p>
+                            </div>
+                            <div class="t-link">
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-vimeo-v"></i></a>
+                            </div>
+                        </div>
+                        <img src="images/1%20(1).jpg" alt="" class="w-100 img" />
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 py-2">
+                    <div class="team">
+                        <div class="position-absolute team-description ">
+                            <div class="t-title ">
+                                <h3 class="m-0 p-0 h3-md"> Mike Rose</h3>
+                            </div>
+                            <div class="subtitle ">
+                                <h5>Director</h5>
+                            </div>
+                            <div class="t-desc px-3">
+                                <p>As an valley indeed so no wonder future nature vanity debating all she</p>
+                            </div>
+                            <div class="t-link">
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-vimeo-v"></i></a>
+                            </div>
+                        </div>
+                        <img src="images/2%20(1).jpg" alt="" class="w-100 img" />
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 py-2">
+                    <div class="team">
+                        <div class="position-absolute team-description ">
+                            <div class="t-title ">
+                                <h3 class="m-0 p-0 h3-md"> Lee Rock</h3>
+                            </div>
+                            <div class="subtitle ">
+                                <h5>Developer</h5>
+                            </div>
+                            <div class="t-desc px-3">
+                                <p>As an valley indeed so no wonder future nature vanity debating all she</p>
+                            </div>
+                            <div class="t-link">
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-vimeo-v"></i></a>
+                            </div>
+                        </div>
+                        <img src="images/3%20(1).jpg" alt="" class="w-100 img" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid bg-black">
         <div class="container">
             <div class="row text-center">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <h1 class="count">696</h1>
+                    <span class="h5-md white">Projects Completed</span>
+                    <p class="count-p">We had a opportunity to work on wide variety of projects for different clients around the world</p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <h1 class="count">280</h1>
+                    <span class="h5-md white">Repeat Clients</span>
+                    <p class="count-p">Our team is formed of high end eccentric perfectionists who craft sophisticated work for clients</p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <h1 class="count">25</h1>
+                    <span class="h5-md white">Employees</span>
+                    <p class="count-p">Our agency currently have 25 employees working full time jobs in productive environment</p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <h1 class="count">863</h1>
+                    <span class="h5-md white">Clients Satisfied0</span>
+                    <p class="count-p">Our client is our priority, we're making sure the each client gets the equal attention</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid background-img py-5">
+        <div class="container text-center text-white py-5">
+            <div class="review">
+                <h5 class="text-light">TESTIMONIALS </h5>
+                <h1 class="h1-md">Reviews</h1>
+                <div class="review-text">
+                    <em>“</em>The Forester done a really great job helping me to customize and implement new features on my page, thank you Forester <em>”</em>
+                    <h5 class="text-white py-3">ALOK SONI</h5>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid py-5 bg-gray">
+        <div class="container py-5">
+            <div class="row text-center no-gutters">
                 <div class="col-12">
-                    <h5>THE CREW</h5>
-                    <h2>Team</h2> </div>
-                <div class="col-lg-4 col-md-6 col-12"></div>
-                <div class="col-lg-4 col-md-6 col-12"></div>
-                <div class="col-lg-4 col-md-6 col-12"></div>
+                    <h5>STAY CONNECTED</h5>
+                    <h1>Social</h1>
+                </div>
+                <div class="flex-view ">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-12 py-5">
+                            <div class="social"><i class="fab fa-instagram"></i></div>
+                            <h5 class="py-2">INSTGRAM</h5>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-12 py-5">
+                            <div class="social"><i class="fab fa-facebook-f"></i></div>
+                            <h5 class="py-2">FACEBOOK</h5>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-12 py-5">
+                            <div class="social"><i class="fab fa-twitter"></i></div>
+                            <h5 class="py-2">TWITTER</h5>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-12 py-5">
+                            <div class="social"><i class="fab fa-vimeo-v"></i></div>
+                            <h5 class="py-2">VIMEO</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-12">
+                    <div class="Get-in">
+                        <h1>Get In Touch</h1>
+                    </div>
+                    <table class="tabe text-left">
+                        <tr>
+                            <td class="icon-td">
+                                <span> <i class="fas fa-map-marker-alt"></i></span>
+                                <span class="line"></span>
+                            </td>
+                            <td colspan="2">
+                                <h5>OUR OFFICE</h5>
+                                <p>6333 Melrose Ave, CA 90069</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><i class="fas fa-envelope"></i></td>
+                            <td colspan="2">
+                                <h5>EMAIL ADDRESS</h5>
+                                <p>support@forester.com</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><i class="fas fa-mobile"></i></td>
+                            <td colspan="2">
+                                <h5>GIVE US A CALL</h5>
+                                <p>(633) 926-316</p>
+                            </td>
+                        </tr>
+                    </table>
+
+                </div>
+                <div class="col-lg-8 col-12"></div>
             </div>
         </div>
     </section>
     <!-- jQuery version must be >= 1.8.0; -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!--    this link work for count -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- A jQuery plugin that adds cross-browser mouse wheel support. (Optional) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="js/lightgallery.min.js"></script>
@@ -257,6 +451,4 @@
     <script src="js/lg-thumbnail.min.js"></script>
     <script src="js/lg-fullscreen.min.js"></script>
     <script src="js/main.js"></script>
-</body>
-
-</html>
+</body></html>
