--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-12">
+                <div class="col-lg-4 col-12 py-5">
                     <h1 class="display-5 pl-4">Get In Touch</h1>
                     <ul class="getintouch text-left">
                         <li>
@@ -370,7 +370,25 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-8 col-12"></div>
+                <div class="col-lg-8 col-12 py-5">
+                    <form>
+                        <fieldset>
+                            <div class="form-group">
+                                <input type="text" name="name" class="form-control" placeholder="Name*"> </div>
+                            <div class="form-group">
+                                <input type="Email" name="email" class="form-control" placeholder="Email Address*"> </div>
+                            <div class="form-group">
+                                <input type="text" name="subject" class="form-control" placeholder="Subject"> </div>
+                            <div class="form-group">
+                                <textarea name="textarea" class="form-control" rows="4" cols="10" placeholder="Your Message*"></textarea>
+                                
+                            </div>
+                            <div class="form-group" >
+                            <input type="submit" value="SEND MESSAGE" class="btn btn-ghost-black" >
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
