--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="fonts/PeaceSans/stylesheet.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="fonts/stylesheet.css" />
-    <link rel="stylesheet" href="css/lightgallery.css">
+    <link rel="stylesheet" href="css/lightgallery.css" />
+    <!--    owel-calousel-->
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <title> The Forester-Creative Multi Propose Template </title>
 </head>
 
@@ -39,7 +42,7 @@
                     </ul>
                 </div>
                 <div class="col-md-2">
-                    <div class="brand-logo"> <img src="images/logo-dark.png" alt=""> </div>
+                    <div class="brand-logo"> <img src="images/logo.png" alt="" id="brand-logo"></div>
                 </div>
                 <div class="col-md-5">
                     <ul class="p-0 menu text-right" id="Menu2">
@@ -381,19 +384,66 @@
                                 <input type="text" name="subject" class="form-control" placeholder="Subject"> </div>
                             <div class="form-group">
                                 <textarea name="textarea" class="form-control" rows="4" cols="10" placeholder="Your Message*"></textarea>
-                                
                             </div>
-                            <div class="form-group" >
-                            <input type="submit" value="SEND MESSAGE" class="btn btn-ghost-black" >
-                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="SEND MESSAGE" class="btn btn-ghost-black"> </div>
                         </fieldset>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+    <section class="container-fluid p-0 m-0">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235014.25792564618!2d72.43965285582327!3d23.02018176033377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e848aba5bd449%3A0x4fcedd11614f6516!2sAhmedabad%2C+Gujarat!5e0!3m2!1sen!2sin!4v1560134542143!5m2!1sen!2sin" width="100%" height="400px" frameborder="0" allowfullscreen></iframe>
+    </section>
+    <!--  owl.carousel.js-->
+    <section class="container-fluid py-5">
+        <div class="container align-items-center d-flex">
+            <div class=" owl-carousel owlClients owl-loaded owl-drag ">
+                <div class="owl-stage-outer">
+                    <div class="owl-stage">
+                        <div class="owl-item px-3"><img src="images/1.png" alt="#"></div>
+                        <div class="owl-item px-3"><img src="images/2.png" alt=""></div>
+                        <div class="owl-item px-3"><img src="images/3.png" alt=""></div>
+                        <div class="owl-item px-3"><img src="images/4.png" alt=""></div>
+                        <div class="owl-item px-3"><img src="images/5.png" alt=""></div>
+                        <div class="owl-item px-3"><img src="images/6.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="container-fluid bg-black">
+        <div class="container">
+            <div class="row ">
+                <div class="col-md-9 col-sm-8 text-left">
+                    <ul class="ul-h">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#"> SERVICES</a></li>
+                        <li><a href="#"> GALLERY</a></li>
+                        <li><a href="#"> TEAM</a></li>
+                        <li><a href="#"> CONTACT</a></li>
+                        <li><a href="#"> BLOG</a></li>
+                    </ul>
+                    <ul class="ul-h">
+                        <li><a href="#"><i class="fas fa-phone"></i><span>(633) 926-316</span></a></li>
+                        <li><a href="#"><i class="far fa-envelope"></i><span>support@forester.com</span></a></li>
+                        <li>
+                            <a href="#"> <i class="fas fa-map-marked"></i><span>6333 Melrose Ave, CA 90069</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-4 text-md-right">
+                    <div class="f-img float-md-right w-100"><img src="images/logo.png" alt=""></div>
+                    <div class="f-desc ">Copyright © 2017 The Forester. All rights reserved. <a href="#">Privacy Policy</a></div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- jQuery version must be >= 1.8.0; -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!--    owel-calousel.js-->
+    <script src="js/owl.carousel.min.js"></script>
     <!--    this link work for count -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- A jQuery plugin that adds cross-browser mouse wheel support. (Optional) -->
