--- a/index.html
+++ b/index.html
@@ -401,13 +401,13 @@
         <div class="container align-items-center d-flex">
             <div class=" owl-carousel owlClients owl-loaded owl-drag ">
                 <div class="owl-stage-outer">
-                    <div class="owl-stage">
-                        <div class="owl-item px-3"><img src="images/1.png" alt="#"></div>
-                        <div class="owl-item px-3"><img src="images/2.png" alt=""></div>
-                        <div class="owl-item px-3"><img src="images/3.png" alt=""></div>
-                        <div class="owl-item px-3"><img src="images/4.png" alt=""></div>
-                        <div class="owl-item px-3"><img src="images/5.png" alt=""></div>
-                        <div class="owl-item px-3"><img src="images/6.png" alt=""></div>
+                    <div class="owl-stage row">
+                        <div class="owl-item px-3 col-4 col-md-2"><img src="images/1.png" alt="#"></div>
+                        <div class="owl-item px-3 col-4 col-md-2"><img src="images/2.png" alt=""></div>
+                        <div class="owl-item px-3 col-4 col-md-2"><img src="images/3.png" alt=""></div>
+                        <div class="owl-item px-3 col-4 col-md-2"><img src="images/4.png" alt=""></div>
+                        <div class="owl-item px-3 col-4 col-md-2"><img src="images/5.png" alt=""></div>
+                        <div class="owl-item px-3 col-4 col-md-2"><img src="images/6.png" alt=""></div>
                     </div>
                 </div>
             </div>
